--- a/StormWeb/Views/Account/LogOn.cshtml
+++ b/StormWeb/Views/Account/LogOn.cshtml
@@ -92,7 +92,7 @@
                             <h4 style="text-align: right">
                                 Have a question? Want to talk with one of our personnel?</h4>
                             <h5 style="text-align: right">
-                                <a class="btn btn-info" href="@Url.Action("Register", "Client")">Register/Enquire Now &raquo;</a>
+                                <a class="btn btn-info" href="@Url.Action("ChooseRegistration", "Client")">Register/Enquire Now &raquo;</a>
                                 <h5>
                         </div>
                         </div>
