--- a/StormWeb/Views/Appointment/Edit.cshtml
+++ b/StormWeb/Views/Appointment/Edit.cshtml
@@ -162,8 +162,9 @@
                         <td align="center">
                         
                         <div class="selectArea">
+                            <!--<a class="cancel_try btn btn-danger" onclick = " jQuery('#confirmApp@(Model.Appointment_Id)').dialog('close');">Cancel</a>&nbsp;&nbsp;&nbsp;-->                               
                             <a class="confirm_try btn btn-primary" id="select@(Model.Appointment_Id)" href="#myModal">Confirm/Reschedule</a>&nbsp;&nbsp;&nbsp; 
-                            <a class="cancel_try btn btn-danger" onclick = " jQuery('#confirmApp@(Model.Appointment_Id)').dialog('close');">Cancel</a>&nbsp;&nbsp;&nbsp;                               
+                            
                         </div>
                         <div class="confirmArea" id="confirmArea@(Model.Appointment_Id)" style="display:none">
                             <input type=submit class="btn btn-primary" />                            
