--- a/StormWeb/Views/Shared/_LoadHeaderWithScript.cshtml
+++ b/StormWeb/Views/Shared/_LoadHeaderWithScript.cshtml
@@ -15,6 +15,7 @@
     <link href="@Url.Content("~/Content/css/icons-sprite.css")" rel="stylesheet"/>
     <link href="@Url.Content("~/Content/css/jquery.pnotify.default.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/my_custom.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/css/font-awesome.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/css/jquery.pnotify.default.icons.css")"
         rel="stylesheet" type="text/css" />
     <link id="themes" href="@Url.Content("~/Content/css/themes.css")" rel="stylesheet"/>
