--- a/StormWeb/Views/Shared/_LayoutEmpty.cshtml
+++ b/StormWeb/Views/Shared/_LayoutEmpty.cshtml
@@ -22,6 +22,11 @@
     <link href="@Url.Content("~/Scripts/plupupload/jquery.plupload.queue/css/jquery.plupload.queue.css")" rel="stylesheet"/>
     <link href="@Url.Content("~/Content/css/styles.css")" rel="stylesheet"/>
     <link href="@Url.Content("~/Content/css/icons-sprite.css")" rel="stylesheet"/>
+    <link href="@Url.Content("~/Content/css/my_custom.css")" rel="stylesheet"/>
+    
+    <link href="@Url.Content("~/Content/css/jquery.pnotify.default.css")" rel="stylesheet" type="text/css" />   
+        <link href="@Url.Content("~/Content/css/jquery.pnotify.default.icons.css")"
+        rel="stylesheet" type="text/css" />
     <link id="themes" href="@Url.Content("~/Content/css/themes.css")" rel="stylesheet"/>
     <!--[if IE 7]>
 <link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/css/ie/ie7.css")" />
@@ -75,7 +80,8 @@
 <script src="@Url.Content("~/Scripts/chart/jqplot.highlighter.min.js")"></script> 
 <script src="@Url.Content("~/Scripts/chart/jqplot.cursor.min.js")"></script> 
 <script src="@Url.Content("~/Scripts/chart/jqplot.dateAxisRenderer.min.js")"></script> 
-<script src="@Url.Content("~/Scripts/custom-script.js")"></script>     
+<script src="@Url.Content("~/Scripts/custom-script.js")"></script>   
+    <script src="@Url.Content("~/Scripts/jquery.pnotify.js")" type="text/javascript"></script> 
     <script src="@Url.Content("~/Scripts/jquery.easing.1.3.js")"></script>
     <script src="@Url.Content("~/Scripts/jquery.bouncebox.1.0.js")"></script>
 <!-- html5.js for IE less than 9 --> 
